# h-ml

./: .gitignore  CHANGELOG.md  LICENSE  README.md  h-ml.cabal
assets/: colors.txt
examples/: Ex1.hs  knn.hs  poly-regr.hs
src/: KNN.hs  Model.hs  PolyRegr.hs
src/ML/: KNN.hs  Model.hs  PolyRegr.hs
src/Utils/: Data.hs  KDTree.hs  Math.hs  Matrix.hs  Tree.hs
theory/: KNN.md  Model.md  PolyRegr.md
