cabal-version:      3.0
name:               h-ml
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             nablaFox
maintainer:         a.finex04@gmail.com
category:           Math
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-type-defaults

library
    import:             warnings
    exposed-modules:    ML.KNN
				                ML.PolyRegr
                        ML.Model
                        Utils.Math
    other-modules:      Utils.Matrix
					              Utils.KDTree
    build-depends:      base ^>=4.17.2.1, random ^>=1.2
    hs-source-dirs:     src
    default-language:   Haskell2010

executable PolyRegr
	import:           warnings
	main-is:          Ex1.hs
	hs-source-dirs:   examples
	build-depends: 	  base, h-ml, random
	default-language: Haskell2010
