cabal-version:      3.0
name:               h-ml
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             nablaFox
maintainer:         a.finex04@gmail.com
category:           Math
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-type-defaults

library
    import:             warnings
    exposed-modules:    KNN
				                PolyRegr
                        Model
    other-modules:      Utils.Matrix
                        Utils.Math
                        Utils.Data
    build-depends:      base ^>=4.17.2.1, random ^>=1.2
    hs-source-dirs:     src
    default-language:   Haskell2010
