cabal-version:      3.0
name:               h-ml
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             nablaFox
maintainer:         a.finex04@gmail.com
category:           Math
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-type-defaults

library
    import:             warnings
    hs-source-dirs:     src
    exposed-modules:
        KNN
        PolyRegr
        Model
        Utils.Math
        Utils.Matrix
        Utils.Data
    build-depends:      base ^>=4.17.2.1, random ^>=1.2
    default-language:   Haskell2010

executable poly-regr
    import:             warnings
    hs-source-dirs:     examples
    main-is:            poly-regr.hs
    build-depends:      base ^>=4.17.2.1, h-ml, random
    default-language:   Haskell2010

executable knn
    import:             warnings
    hs-source-dirs:     examples
    main-is:            knn.hs
    build-depends:      base ^>=4.17.2.1, h-ml, random
    default-language:   Haskell2010
